core/libycp/testsuite/tests/errors/DuplParam.ycp
{
    return (foreach (`i, `i, $[1:1, 2:2, 3:3], { return i; }));
}
